--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.0",
     "@t3-oss/env-nextjs": "^0.13.10",
+    "ai": "^6.0.1",
     "next": "16.1.1",
     "openai": "^6.15.0",
     "react": "19.2.3",
