--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.0",
+    "@qdrant/js-client-rest": "^1.16.2",
     "@t3-oss/env-nextjs": "^0.13.10",
     "ai": "^6.0.1",
     "next": "16.1.1",
