--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@qdrant/js-client-rest": "^1.16.2",
     "@t3-oss/env-nextjs": "^0.13.10",
     "ai": "^6.0.1",
+    "dotenv": "^17.2.3",
     "next": "16.1.1",
     "openai": "^6.15.0",
     "react": "19.2.3",
