--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "openai": "^6.15.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "uuid": "^13.0.0",
     "zod": "^4.2.1"
   },
