feat: Update environment configuration and integrate Mistral AI for embeddings; enhance indexing logic and add guardrails for input validation

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,8 @@ POE_API_KEY=
 # The name/handle of the bot to use (e.g., grok-4.1-fast-non-reasoning)
 POE_BOT_NAME=grok-4.1-fast-non-reasoning
 
-# Google Gemini API Configuration
-# API Key for generating embeddings
-GOOGLE_API_KEY=
+# Mistral AI Configuration
+MISTRAL_API_KEY=
 
 # Qdrant Configuration
 # URL of the Qdrant instance
