--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@t3-oss/env-nextjs": "^0.13.10",
     "ai": "^6.0.1",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "openai": "^6.15.0",
     "react": "19.2.3",
