refactor(env): Remove RAG-related environment variables

--- a/.env.example
+++ b/.env.example
@@ -5,11 +5,6 @@ POE_API_KEY=
 # The name/handle of the bot to use (e.g., grok-4.1-fast-non-reasoning)
 POE_BOT_NAME=grok-4.1-fast-non-reasoning
 
-# Mistral AI Configuration
-MISTRAL_API_KEY=
+# College Scorecard API
+COLLEGE_SCORECARD_API_KEY=
 
-# Qdrant Configuration
-# URL of the Qdrant instance
-QDRANT_URL=
-# API Key for Qdrant Cloud (optional if local)
-QDRANT_API_KEY=
